--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,28 +1,25 @@
 .footer {
-    width: 100%;
-    height: 300px;
-    background-color: #252525;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  width: 100%;
+  height: 200px;
+  background-color: #474747;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
-    &__text {
-        color: white;
-        font-size: 24px;
-        font-family: 'Dm Sans';
-        
-    }
+  &__text {
+    font-size: 24px;
+    font-family: "Playfair Display";
+    color: white;
+  }
 }
 
 .social {
-    margin-top: 20px;
-    
+  margin-top: 20px;
 
-    &__icon {
-        font-size: 28px;
-        color: #ed9c2a;
-        padding: 0 4px;
-    }
+  &__icon {
+    font-size: 28px;
+    color: #f6f6f6;
+    padding: 0 4px;
+  }
 }
-
