--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -1,37 +1,47 @@
-body {
-    margin: 0;
-    padding: 0;
+header {
+  position: absolute;
+  margin: 0;
+  padding: 0;
 }
 
-.header {
-    margin: 0;
+.nav {
+  position: absolute;
+  z-index: 1;
+  transform: translateX(-100%);
+  transition: ease-in 0.4s;
 
-    &__nav {
-        width: 100%;
-        height: 10vh;
-        display: flex;
-        justify-content: right;
-        align-items: center;
-        background-color: #252525;
-    }
-    
-    &__list {
-        display: flex;
-        list-style-type: none;
-    }
+  &__list {
+    height: 120px;
+    display: flex;
+    justify-content: start;
+  }
 
-    &__item {
-        margin: 0 15px;
+  &__item {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+  }
 
-        &__link {
-            text-decoration: none;
-            color: white;
-            font-size: 16px;
-            font-family: 'Dm Sans';
-            margin-right: 10px;
-            text-transform: uppercase;
-        }
-        
+  &__link {
+    text-decoration: none;
+    color: #474747;
+    font-size: 20px;
+    font-family: "Urbanist";
+    padding: 5px 0;
+
+    @media screen and (min-width: 768px) {
+      color: black;
     }
+  }
 }
 
+.navActive {
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+  width: 120px;
+  transform: translateX(0%);
+  transition: ease-out 0.4s;
+  position: absolute;
+  background-color: #fdfdfd;
+}
