--- a/src/components/main/contact/Contact.scss
+++ b/src/components/main/contact/Contact.scss
@@ -13,7 +13,6 @@
 
   &__title {
     font-size: 34px;
-    padding-top: 150px;
     color: #474747;
   }
 
@@ -24,22 +23,45 @@
     flex-direction: column;
     padding: 20px 0;
     align-items: center;
+    justify-content: center;
+  }
+
+  &__input {
+    background-color: white;
+    border: none;
+    width: 70%;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+      rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    margin: 10px 0;
+    font-family: "Urbanist";
+    font-size: 12px;
+
+    @media screen and (min-width: 768px) {
+      width: 25%;
+      height: 20px;
+      margin: 5px 0;
+    }
   }
 
   &__message {
     background-color: white;
     border: none;
-    width: 80%;
+    width: 75%;
+    padding: 15px;
     height: 130px;
     border-radius: 10px;
     margin-top: 10px;
+    font-family: "Urbanist";
+    font-size: 12px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
       rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 
     @media screen and (min-width: 768px) {
       width: 28%;
-      height: 200px;
-      margin: 0;
+      height: 150px;
+      margin: 5px 0;
     }
   }
 
@@ -56,37 +78,7 @@
     cursor: pointer;
 
     @media screen and (min-width: 768px) {
-      width: 20%;
-    }
-  }
-}
-
-.inputcontainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 50%;
-
-  @media screen and (min-width: 768px) {
-    display: flex;
-    flex-direction: row;
-  }
-
-  &__input {
-    background-color: white;
-    border: none;
-    width: 290px;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
-      rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-    margin: 10px 10px;
-
-    @media screen and (min-width: 768px) {
-      width: 24%;
-      padding: 10px;
-      margin-bottom: 40px;
+      width: 10%;
     }
   }
 }
