--- a/src/components/main/home/about/About.scss
+++ b/src/components/main/home/about/About.scss
@@ -42,14 +42,16 @@
     border-radius: 5px;
     cursor: pointer;
     color: white;
+    text-decoration: none;
+    text-align: center;
 
     @media screen and (min-width: 768px) {
-      width: 20%;
+      width: 15%;
     }
 
     &:hover {
       background-color: transparent;
-      border: 1px solid #fdd54f;
+      border: 1px solid #89bcda;
     }
   }
 }
