--- a/src/components/main/home/slider/Slider.scss
+++ b/src/components/main/home/slider/Slider.scss
@@ -3,15 +3,15 @@
   height: 80vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   background-color: #fdfdfd;
   margin: 0;
   padding: 0;
 
   @media screen and (min-width: 768px) {
-    height: 90vh;
-    justify-content: space-between;
+    height: 100vh;
+    justify-content: space-evenly;
   }
 
   &__imgcontainer {
@@ -20,13 +20,14 @@
 
     @media screen and (min-width: 768px) {
       width: 40%;
+      height: 400px;
     }
 
     &__img {
       width: 90%;
 
       @media screen and (max-width: 678px) {
-        width: 100%;
+        width: 80%;
       }
     }
   }
@@ -36,16 +37,16 @@
     font-size: 14px;
     padding: 10px;
     line-height: 25px;
+    margin-bottom: 20px;
   }
 
-  &__btn {
+  &__link {
     background-image: linear-gradient(#89bcda, #9dd5f6 170%);
     border: none;
-    padding: 10px 60px;
+    padding: 8px 40px 4px 40px;
     border-radius: 5px;
-    font-size: 16px;
     font-family: "Urbanist";
-    margin: 40px 0;
+    font-size: 24px;
     cursor: pointer;
     color: white;
 
@@ -126,4 +127,8 @@
   margin-bottom: 120px;
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
+}
+
+.control-dots {
+  display: none;
 }
