--- a/src/components/main/home/slider/Slider.scss
+++ b/src/components/main/home/slider/Slider.scss
@@ -48,7 +48,7 @@
     font-family: "Urbanist";
     font-size: 24px;
     cursor: pointer;
-    color: white;
+    color: #fdfdfd;
 
     &:hover {
       background-color: transparent;
