--- a/src/components/main/resume/Resume.scss
+++ b/src/components/main/resume/Resume.scss
@@ -36,7 +36,7 @@
     font-family: "Urbanist";
     border-radius: 5px;
     cursor: pointer;
-    color: white;
+    color: #fdfdfd;
 
     @media screen and (min-width: 768px) {
       width: 15%;
