--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -43,5 +43,5 @@ header {
   transform: translateX(0%);
   transition: ease-out 0.4s;
   position: absolute;
-  background-color: #fdfdfd;
+  background-color: #fdfdfdc4;
 }
