--- a/src/components/main/contact/Contact.scss
+++ b/src/components/main/contact/Contact.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: #fdfdfd;
+  background-color: #f6f6f6;
 
   @media screen and (min-width: 768px) {
     height: 90vh;
@@ -27,7 +27,7 @@
   }
 
   &__input {
-    background-color: white;
+    background-color: #fdfdfd;
     border: none;
     width: 70%;
     padding: 15px;
@@ -46,7 +46,7 @@
   }
 
   &__message {
-    background-color: white;
+    background-color: #fdfdfd;
     border: none;
     width: 75%;
     padding: 15px;
@@ -71,7 +71,7 @@
     margin-top: 40px;
     background-image: linear-gradient(#89bcda, #9dd5f6 170%);
     border: none;
-    color: white;
+    color: #fdfdfd;
     font-size: 16px;
 
     border-radius: 5px;
