--- a/src/components/main/home/hero/Hero.scss
+++ b/src/components/main/home/hero/Hero.scss
@@ -35,7 +35,7 @@ body {
   }
 
   &__title {
-    font-size: 32px;
+    font-size: 26px;
     font-family: "Urbanist";
     color: #89bcda;
 
@@ -66,7 +66,7 @@ body {
     text-decoration: none;
     margin-top: 20px;
     cursor: pointer;
-    color: white;
+    color: #fdfdfd;
 
     &:hover {
       background-color: transparent;
