--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -8,8 +8,8 @@
   flex-direction: column;
 
   &__text {
-    font-size: 24px;
-    font-family: "Playfair Display";
+    font-size: 22px;
+    font-family: "Urbanist";
     color: #fdfdfd;
   }
 }
@@ -18,7 +18,7 @@
   margin-top: 20px;
 
   &__icon {
-    font-size: 28px;
+    font-size: 24px;
     color: #f6f6f6;
     padding: 0 4px;
   }
