--- a/src/components/main/contact/Contact.scss
+++ b/src/components/main/contact/Contact.scss
@@ -73,9 +73,13 @@
     border: none;
     color: #fdfdfd;
     font-size: 16px;
-
     border-radius: 5px;
     cursor: pointer;
+
+    &:hover {
+      transition: all ease 0.7s;
+      color: #474747;
+    }
 
     @media screen and (min-width: 768px) {
       width: 10%;
