--- a/src/components/main/home/hero/Hero.scss
+++ b/src/components/main/home/hero/Hero.scss
@@ -26,7 +26,6 @@ body {
   width: 90%;
   display: flex;
   flex-direction: column;
-
   align-items: center;
 
   @media screen and (min-width: 768px) {
@@ -69,8 +68,8 @@ body {
     color: #fdfdfd;
 
     &:hover {
-      background-color: transparent;
-      border: 1px solid #89bcda;
+      transition: all ease 0.7s;
+      color: #474747;
     }
   }
 }
