--- a/src/components/main/home/hero/Hero.scss
+++ b/src/components/main/home/hero/Hero.scss
@@ -34,13 +34,15 @@ body {
   }
 
   &__title {
-    font-size: 26px;
+    margin-top: 20px;
+    font-size: 24px;
     font-family: "Urbanist";
     color: #89bcda;
 
     @media screen and (min-width: 768px) {
       text-align: center;
       font-size: 42px;
+      margin: 0;
     }
   }
 
