--- a/src/components/main/home/slider/Slider.scss
+++ b/src/components/main/home/slider/Slider.scss
@@ -3,15 +3,14 @@
   height: 75vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   background-color: #fdfdfd;
   margin: 0;
   padding: 0;
 
   @media screen and (min-width: 768px) {
-    height: 100vh;
-    justify-content: space-evenly;
+    height: 90vh;
   }
 
   &__imgcontainer {
@@ -19,13 +18,13 @@
 
     @media screen and (min-width: 768px) {
       width: 40%;
-      height: 400px;
+      height: 350px;
     }
 
     &__img {
       width: 100%;
 
-      @media screen and (max-width: 678px) {
+      @media screen and (min-width: 768px) {
         width: 80%;
       }
     }
@@ -37,6 +36,14 @@
     padding: 10px;
     line-height: 25px;
     margin-bottom: 20px;
+
+    @media screen and (min-width: 768px) {
+      width: 60%;
+      margin: 0 auto;
+      margin-bottom: 20px;
+
+      font-size: 16px;
+    }
   }
 
   &__link {
