--- a/src/components/main/home/hero/Hero.scss
+++ b/src/components/main/home/hero/Hero.scss
@@ -33,6 +33,11 @@ body {
     width: 40%;
   }
 
+  @media screen and (min-width: 992px) {
+    justify-content: end;
+    width: 40%;
+  }
+
   &__title {
     margin-top: 20px;
     font-size: 24px;
@@ -82,7 +87,7 @@ body {
 }
 
 .imgcontainer {
-  width: 60%;
+  width: 230px;
   height: 230px;
   background-image: url("file:///Users/idadanielsson/Downloads/me__hero.png");
   background-size: cover;
@@ -95,7 +100,7 @@ body {
   @media screen and (min-width: 768px) {
     text-align: center;
     font-size: 28px;
-    width: 30%;
+    width: 430px;
     height: 430px;
   }
 }
