--- a/src/components/main/home/slider/Slider.scss
+++ b/src/components/main/home/slider/Slider.scss
@@ -1,6 +1,6 @@
 .project {
   width: 100%;
-  height: 75vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -9,8 +9,12 @@
   margin: 0;
   padding: 0;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 850px) {
     height: 90vh;
+  }
+
+  @media screen and (max-width: 768px) {
+    height: 80vh;
   }
 
   &__imgcontainer {
