--- a/src/components/main/home/slider/Slider.scss
+++ b/src/components/main/home/slider/Slider.scss
@@ -10,7 +10,7 @@
   padding: 0;
 
   @media screen and (min-width: 850px) {
-    height: 90vh;
+    height: 100vh;
   }
 
   @media screen and (max-width: 768px) {
@@ -21,16 +21,12 @@
     width: 100%;
 
     @media screen and (min-width: 768px) {
-      width: 40%;
-      height: 350px;
+      width: 50%;
+      height: 450px;
     }
 
     &__img {
       width: 100%;
-
-      @media screen and (min-width: 768px) {
-        width: 80%;
-      }
     }
   }
 
@@ -39,7 +35,7 @@
     font-size: 14px;
     padding: 10px;
     line-height: 25px;
-    margin-bottom: 20px;
+    margin: 20px 0;
 
     @media screen and (min-width: 768px) {
       width: 60%;
